syntax = "proto2";

package lagompb;

option java_package = "io.superflat.lagompb.protobuf";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
    // kafka related option
    optional KafkaRule kafka = 1071;
    // ES/CQRS rules
    optional CommandRule command = 1072;
}

// KakfaRule defines the message broker api field annotation
message KafkaRule {
    // states whether the given field will be used as partition key when the
    // message is pushed to kafka
    required bool partition_key = 1;
}

// CommandRule defines some proto message field annotation
// that can be put on a command.
message CommandRule {
    // states whether the given field is the entity_id or not.
    // this is required on every command
    required bool entity_id = 1;
}
